--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # CHANGELOG
 
+## v5.0.0 (Breking change)
+
+- rollback of the logic that allow to create `externalConfigMapValues` see the documentation for more info and examples
+
 ## v4.0.0 (Breking change)
 
 - (breaking) created variables `externalConfigMapFiles` and `externalConfigMapValues` to load values from external config maps
